<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Spinner
        android:id="@+id/odabirGodina"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toTopOf="@+id/odabirIstrazivanja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/odabirIstrazivanja"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toTopOf="@+id/odabirGrupa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/odabirGodina" />

    <Spinner
        android:id="@+id/odabirGrupa"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dodajIstrazivanjeDugme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upisDugme2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odabirGrupa" />
</androidx.constraintlayout.widget.ConstraintLayout>