<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/progresTekst"
        android:layout_width="339dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toTopOf="@+id/dugmePredaj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <Button
        android:id="@+id/dugmePredaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/predaj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progresTekst" />


</androidx.constraintlayout.widget.ConstraintLayout>